# librarian

./: .gitignore  README.md  app.py  asgi.py  download.py  pagination.py  pyproject.toml  settings.py
librarian/: app.py  asgi.py  models.py  providerconf.py  settings.py
templates/: book.html  index.html  pagination.html  search.html
